cmake_minimum_required(VERSION 3.27)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp
        addBinary.cpp
        addStrings.cpp
        addTwoNumbers.cpp
        averageOfLevels.cpp
        canPartition.cpp
        change.cpp
        checkSubarraySum.cpp
        circularArrayLoop.cpp
        combinationSum.cpp
        combinationSum2.cpp
        constructMaximumBinaryTree.cpp
        containsNearbyDuplicate.cpp
        convexPolygon.cpp
        countPrimes.cpp
        countSegments.cpp
        deleteDuplicates.cpp
        detectCapitalUse.cpp
        distributeCandies.cpp
        findBottomLeftValue.cpp
        findComplement.cpp
        findDisappearedNumbers.cpp
        findDuplicate.cpp
        findDuplicateFileName.cpp
        findDuplicates.cpp
        findDuplicateSubtrees.cpp
        findErrorNums.cpp
        findKthLargest.cpp
        findLongestChain.cpp
        findLUSlength.cpp
        findMaxAverage.cpp
        findMaxAverageII.cpp
        findMaxForm.cpp
        findMinDifference.cpp
        findMode.cpp
        findRedundantConnection.cpp
        findRestaurant.cpp
        findTarget.cpp
        findTargetSumWays.cpp
        findTheDifference.cpp
        fourSum.cpp
        getIntervals.cpp
        getSum.cpp
        groupAnagrams.cpp
        intersectII.cpp
        intersection.cpp
        islandPerimeter.cpp
        isPalindrome.cpp
        isPalindromeList.cpp
        isPerfectSquare.cpp
        isSubsequence.cpp
        isUgly.cpp
        isValid.cpp
        isValidSudoku.cpp
        largestNumber.cpp
        largestValues.cpp
        lengthOfLongestSubstring.cpp
        letterCombinations.cpp
        lexicalOrder.cpp
        licenseKeyFormatting.cpp
        longestIncreasingPath.cpp
        longestPalindromeSubseq.cpp
        majorityElement.cpp
        majorityElementII.cpp
        maxCount.cpp
        maxPoints.cpp
        maxSubArray.cpp
        maxSubArrayLen.cpp
        mergeKLists.cpp
        mergeTwoLists.cpp
        minDistance.cpp
        minMoves.cpp
        minSteps.cpp
        monotoneIncreasingDigits.cpp
        myPow.cpp
        mySqrt.cpp
        nextGreatestLetter.cpp
        nextPermutation.cpp
        NumArray.cpp
        numberOfArithmeticSlices.cpp
        numberOfBoomerangs.cpp
        numIslands.cpp
        NumMatrix.cpp
        optimalDivision.cpp
        palindromePairs.cpp
        pathSumIII.cpp
        permute.cpp
        permuteUnique.cpp
        plusOne.cpp
        readBinaryWatch.cpp
        replaceWords.cpp
        reverseList.cpp
        reverseStr.cpp
        rob.cpp
        robII.cpp
        robIII.cpp
        rotate.cpp
        searchInsert.cpp
        searchRange.cpp
        shoppingOffers.cpp
        singleNumber.cpp
        singleNumberII.cpp
        smallestDistancePair.cpp
        smallestFactorization.cpp
        solveNQueens.cpp
        subsets.cpp
        subsetsWithDup.cpp
        sumOfLeftLeaves.cpp
        threeSum.cpp
        threeSumClosest.cpp
        toHex.cpp
        topKFrequent.cpp
        topKFrequent2.cpp
        totalHammingDistance.cpp
        totalNQueens.cpp
        trap.cpp
        Trie.cpp
        validPalindrome.cpp
        validSquare.cpp
        validUtf8.cpp
        WordDictionary.cpp)
